--- a/p_one.html
+++ b/p_one.html
@@ -68,6 +68,19 @@ a {text-decoration:none;}
 <a href="Icon/aci.svg" download><img src="Icon/aci.svg" alt=""/></a>
 <a href="Icon/acj.svg" download><img src="Icon/acj.svg" alt=""/></a>
 <a href="Icon/acl.svg" download><img src="Icon/acl.svg" alt=""/></a>
+<a href="Icon/acs.svg" download><img src="Icon/acs.svg" alt=""/></a>
+<a href="Icon/act.svg" download><img src="Icon/act.svg" alt=""/></a>
+<a href="Icon/acu.svg" download><img src="Icon/acu.svg" alt=""/></a>
+<a href="Icon/acv.svg" download><img src="Icon/acv.svg" alt=""/></a>
+<a href="Icon/acw.svg" download><img src="Icon/acw.svg" alt=""/></a>
+<a href="Icon/acx.svg" download><img src="Icon/acx.svg" alt=""/></a>
+<a href="Icon/acy.svg" download><img src="Icon/acy.svg" alt=""/></a>
+<a href="Icon/acz.svg" download><img src="Icon/acz.svg" alt=""/></a>
+<a href="Icon/ada.svg" download><img src="Icon/ada.svg" alt=""/></a>
+<a href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
+<a href="Icon/adc.svg" download><img src="Icon/adc.svg" alt=""/></a>
+<a href="Icon/add.svg" download><img src="Icon/add.svg" alt=""/></a>
+<a href="Icon/ade.svg" download><img src="Icon/ade.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
