--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 form {padding-top:18px;padding-bottom:15px;padding-left:7%;margin:0;}
-img.ex {height:200px;width:200px;margin-left:100px;}
+.ex {height:200px;width:200px;margin-left:100px;}
 </style>
 </head>
 <body>
