--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@ a {text-decoration:none;}
 form {padding-top:18px;padding-bottom:15px;padding-left:7%;margin:0;}
 .ex {height:200px;width:200px;margin-left:50px;}
 </style>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7798975670372068",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <h1>Public Domain Scalable Vector Graphics</h1>
