--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@ img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 form {padding-top:18px;padding-bottom:15px;padding-left:7%;margin:0;}
-.ex {height:200px;width:200px;margin-left:50px;}
 </style>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7798975670372068",
-    enable_page_level_ads: true
-  });
-</script>
 </head>
 <body>
 <h1>Public Domain Scalable Vector Graphics</h1>
@@ -73,7 +64,7 @@ form {padding-top:18px;padding-bottom:15px;padding-left:7%;margin:0;}
 <h2>- How To Download and Use -</h2>
 <p>First find an image that you whould like to use. On most devices you can simply click and the image will download on its own. However if this does not work for you simply right click the image and click save as. In case this does not work, try to open the file on a new window and view the source code. Then just copy and paste the text onto a text editor. Remember that svg is a software and you can change this software anytime you like.</p><br/>
 <p>You may also like to change or edit the color of your svg. One way to do this is to open your svg file with a text editor. Next find the part you whould like to change. This will have a # sign and three or six digits after it. If you need to there is a hexadecimal reference page here with several colors to choose from. Their are images that you can change the stroke that is the line's color, or the fill that is the background or fill-in color. This is just one way to change the color you can use other methods like CSS or Javascript as well. Here is an example of this, in this case the image is the same only the color is different.</p>
-<a class="ex" href="Icon/acx.svg" download><img src="Icon/acx.svg" alt=""/></a>
-<a class="ex" href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
+<a href="Icon/acx.svg" download><img src="Icon/acx.svg" alt=""/></a>
+<a href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
 </body>
 </html>
