--- a/index.html
+++ b/index.html
@@ -27,27 +27,30 @@ form {padding-top:18px;padding-bottom:15px;padding-left:6%;margin:0;}
 <a href="Icon/abk.svg" download><img src="Icon/abk.svg" alt=""/></a>
 <a href="Icon/aaab.svg" download><img src="Icon/aaab.svg" alt=""/></a>
 <a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt=""/></a>
-<a href="Icon/ack.svg" download><img src="Icon/ack.svg" alt=""/></a>
-<a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
+<a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
 <a href="Icon/abu.svg" download><img src="Icon/abu.svg" alt=""/></a>
-<a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
 <a href="Icon/acm.svg" download><img src="Icon/acm.svg" alt=""/></a>
-<a href="Icon/ach.svg" download><img src="Icon/ach.svg" alt=""/></a>
 <a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt=""/></a>
 <a href="Icon/abe.svg" download><img src="Icon/abe.svg" alt=""/></a>
 <a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt=""/></a>
 <a href="Icon/acd.svg" download><img src="Icon/acd.svg" alt=""/></a>
-<a href="Icon/aam.svg" download><img src="Icon/aam.svg" alt=""/></a>
-<a href="Icon/aal.svg" download><img src="Icon/aal.svg" alt=""/></a>
+<a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
+<a href="Icon/abz.svg" download><img src="Icon/abz.svg" alt=""/></a>
 <a href="Icon/aak.svg" download><img src="Icon/aak.svg" alt=""/></a>
 <a href="Icon/abc.svg" download><img src="Icon/abc.svg" alt=""/></a>
 <a href="Icon/acg.svg" download><img src="Icon/acg.svg" alt=""/></a>
-<a href="Icon/acr.svg" download><img src="Icon/acr.svg" alt=""/></a>
 <a href="Icon/aaf.svg" download><img src="Icon/aaf.svg" alt=""/></a>
-<a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt=""/></a>
 <a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
 <a href="Icon/acc.svg" download><img src="Icon/acc.svg" alt=""/></a>
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
+<a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
+<a href="Icon/ack.svg" download><img src="Icon/ack.svg" alt=""/></a>
+<a href="Icon/acy.svg" download><img src="Icon/acy.svg" alt=""/></a>
+<a href="Icon/acz.svg" download><img src="Icon/acz.svg" alt=""/></a>
+<a href="Icon/ada.svg" download><img src="Icon/ada.svg" alt=""/></a>
+<a href="Icon/adc.svg" download><img src="Icon/adc.svg" alt=""/></a>
+<a href="Icon/add.svg" download><img src="Icon/add.svg" alt=""/></a>
+<a href="Icon/ade.svg" download><img src="Icon/ade.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <h2>- About -</h2>
 <p>This is a personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. The source code of this SVG is valid 1.1. If you need help picking a color, there is a hexadecimal color reference linked here. We now accept donations/tips via PayPal. Visit us on Github, at publicsvg.github.io</p>
