--- a/p_one.html
+++ b/p_one.html
@@ -35,7 +35,7 @@ a {text-decoration:none;}
 <a href="Icon/abt.svg" download><img src="Icon/abt.svg" alt=""/></a>
 <a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
 <a href="Icon/abx.svg" download><img src="Icon/abx.svg" alt=""/></a>
-<a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
+<a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
 <a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
 <a href="Icon/aca.svg" download><img src="Icon/aca.svg" alt=""/></a>
 <a href="Icon/acb.svg" download><img src="Icon/acb.svg" alt=""/></a>
@@ -55,8 +55,8 @@ a {text-decoration:none;}
 <a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt=""/></a>
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
 <a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
-<a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
-<a href="Icon/abz.svg" download><img src="Icon/abz.svg" alt=""/></a>
+<a href="Icon/aam.svg" download><img src="Icon/aam.svg" alt=""/></a>
+<a href="Icon/aal.svg" download><img src="Icon/aal.svg" alt=""/></a>
 <a href="Icon/acn.svg" download><img src="Icon/acn.svg" alt=""/></a>
 <a href="Icon/acp.svg" download><img src="Icon/acp.svg" alt=""/></a>
 <a href="Icon/acq.svg" download><img src="Icon/acq.svg" alt=""/></a>
@@ -74,13 +74,10 @@ a {text-decoration:none;}
 <a href="Icon/acv.svg" download><img src="Icon/acv.svg" alt=""/></a>
 <a href="Icon/acw.svg" download><img src="Icon/acw.svg" alt=""/></a>
 <a href="Icon/acx.svg" download><img src="Icon/acx.svg" alt=""/></a>
-<a href="Icon/acy.svg" download><img src="Icon/acy.svg" alt=""/></a>
-<a href="Icon/acz.svg" download><img src="Icon/acz.svg" alt=""/></a>
-<a href="Icon/ada.svg" download><img src="Icon/ada.svg" alt=""/></a>
+<a href="Icon/acr.svg" download><img src="Icon/acr.svg" alt=""/></a>
+<a href="Icon/ach.svg" download><img src="Icon/ach.svg" alt=""/></a>
+<a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt=""/></a>
 <a href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
-<a href="Icon/adc.svg" download><img src="Icon/adc.svg" alt=""/></a>
-<a href="Icon/add.svg" download><img src="Icon/add.svg" alt=""/></a>
-<a href="Icon/ade.svg" download><img src="Icon/ade.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
