--- a/p_one.html
+++ b/p_one.html
@@ -78,6 +78,10 @@ a {text-decoration:none;}
 <a href="Icon/ach.svg" download><img src="Icon/ach.svg" alt=""/></a>
 <a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt=""/></a>
 <a href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
+<a href="Icon/adf.svg" download><img src="Icon/adf.svg" alt=""/></a>
+<a href="Icon/adg.svg" download><img src="Icon/adg.svg" alt=""/></a>
+<a href="Icon/adh.svg" download><img src="Icon/adh.svg" alt=""/></a>
+<a href="Icon/adi.svg" download><img src="Icon/adi.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
