--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="Public Domain"/>
 <meta name="description" content="public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, license, about, github"/>
+<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, license, github"/>
 <style>
  @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
 body {font-family:Helvetica, Arial;text-align:center;}
@@ -51,17 +51,17 @@ form {padding-top:18px;padding-bottom:15px;padding-left:6%;margin:0;}
 <a href="Icon/adc.svg" download><img src="Icon/adc.svg" alt=""/></a>
 <a href="Icon/add.svg" download><img src="Icon/add.svg" alt=""/></a>
 <a href="Icon/ade.svg" download><img src="Icon/ade.svg" alt=""/></a>
-<a href="p_one.html"><h3>| Next Page |</h3></a>
+<a href="p_one.html"><h3>[ Next Page ]</h3></a>
 <h2>- About -</h2>
 <p>This is a personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. The source code of this SVG is valid 1.1. If you need help picking a color, there is a hexadecimal color reference linked here. We now accept donations/tips via PayPal. Visit us on Github, at publicsvg.github.io</p>
-<a href="p_color.html"><h3>| Color Reference |</h3></a>
+<a href="p_color.html"><h3>[ Color Reference ]</h3></a>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. We have released all rights to the images. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software. We reserve the right to change this Policy at any time, in our sole discretion.</p>
-<a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
+<a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>[ Creative Commons Zero 1.0 License ]</h3></a>
 <p>Our site does use cookies. Cookies are small files that are transferred to your computer's hard drive by your web browser, which enables your browser to capture and remember certain information. Cookies can be disabled in your browser if you choose. Our third-party analytics providers use cookies to record information about your activities on the site and to remember you when you return to the website.</p>
 <h2>- How To Download and Use -</h2>
 <p>First find an image that you whould like to use. On most devices you can simply click and the image will download on its own. However if this does not work for you simply right click the image and click save as. In case this does not work, try to open the file on a new window and view the source code. Then just copy and paste the text onto a text editor. Remember that svg is a software and you can change this software anytime you like.</p><br/>
 <p>You may also like to change or edit the color of your svg. One way to do this is to open your svg file with a text editor. Next find the part you whould like to change. This will have a # sign and three or six digits after it. If you need to there is a hexadecimal reference page here with several colors to choose from. Their are images that you can change the stroke that is the line's color, or the fill that is the background or fill-in color. This is just one way to change the color you can use other methods like CSS or Javascript as well. Here is an example of this, in this case the image is the same only the color is different.</p>
-<a href="Icon/acx.svg" download><img src="Icon/acx.svg" alt=""/></a>
-<a href="Icon/adb.svg" download><img src="Icon/adb.svg" alt=""/></a>
+<a href="Icon/acx.svg"><img src="Icon/acx.svg" alt=""/></a>
+<a href="Icon/adb.svg"><img src="Icon/adb.svg" alt=""/></a>
 </body>
 </html>
