--- a/p_color.html
+++ b/p_color.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="public domain"/>
 <meta name="description" content="public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, color, colors, reference, list, hexadecimal, free, gratis, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
+<meta name="keywords" content="svg, public, domain, software, color, colors, reference, list, hexadecimal, free, gratis, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, style, editor"/>
 <style>
  @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
 body {font-family:Helvetica, Arial;text-align:center;}
@@ -378,6 +378,6 @@ img.lm {background-color:#830;}
 #e0e<img class="en" src="Icon/b.svg" alt="">
 #f0f<img class="eo" src="Icon/b.svg" alt="">
 </p>
-<a href="index.html"><h3>| Back |</h3></a>
+<a href="index.html"><h3>[ Back ]</h3></a>
 </body>
 </html>
