--- a/p_one.html
+++ b/p_one.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="public domain"/>
 <meta name="description" content="public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
+<meta name="keywords" content="svg, public, domain, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny"/>
 <style>
  @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
 body {font-family:Helvetica, Arial;text-align:center;}
@@ -83,6 +83,6 @@ a {text-decoration:none;}
 <a href="Icon/adh.svg" download><img src="Icon/adh.svg" alt=""/></a>
 <a href="Icon/adi.svg" download><img src="Icon/adi.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
-<a href="index.html"><h3>| Back |</h3></a>
+<a href="index.html"><h3>[ Back ]</h3></a>
 </body>
 </html>
